[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indian-traffic-rl"
version = "1.0.0"
description = "NexFlow Reinforcement Learning Traffic Controller"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "torch",
    "pyyaml",
    "openenv-core>=0.2.0",
    "openai",          
    "numpy"
]

[project.scripts]
server = "server.app:main"